# vala-webkit2gtk-boilerplate

./: build.sh  meson.build  meson_options.txt  run  uncrustify.cfg
build-aux/: postinstall.py
data/: io.github.webkit2gtk-boilerplate.gschema.xml  meson.build  webkit2gtk-boilerplate.appdata.xml.in  webkit2gtk-boilerplate.desktop.in
data/static/: index.html
data/themes/default/: index.html
extensions/: jsapi.vala  jsutils.vala  meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  webkit2gtk-boilerplate.gresource.xml
src/constants/: WindowType.vala
src/ui/: window.ui
src/widgets/: WebView.vala  Window.vala
vapi/: javascriptcoregtk-4.0.vapi  libwebkit2gtk-boilerplate.vapi
